kube-data/abc_tomcatapp_dev/abc_tomcatapp_student_dev.yml
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: abc-tomcatapp-student-dev
  name: abc-tomcatapp-student-dev
  namespace: abc-tomcatapp-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: abc-tomcatapp-student-dev
      name: abc-tomcatapp-student-dev
    spec:
      containers:      
        -
          image: "lb.example.com:5000/student:v1"
          name: abc-tomcatapp-student-dev
          ports:
            -
              containerPort: 8080
              protocol: TCP
                          

---

apiVersion: v1
kind: Service
metadata:
  name: abc-tomcatapp-student-dev
  namespace: abc-tomcatapp-dev
  labels:
    k8s-app: abc-tomcatapp-student-dev
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    k8s-app: abc-tomcatapp-student-dev
  type: ClusterIP
